Fix for overlapping inventory, fix for keyboard and mouse events not hooking correctly.

--- a/modules/website/src/main/webapp/resources/content/game/css/main.css
+++ b/modules/website/src/main/webapp/resources/content/game/css/main.css
@@ -284,7 +284,7 @@ body
     height: 100%;
     background: #222;
     overflow: hidden;
-    z-index: 1;
+    z-index: 999;
 }
 #projectsandbox .ps-sidebar.left
 {
